# Metis

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  ROADMAP.md
projects/: EXAMPLE_project.yaml
src/metis/: cli.py  paths.py
src/metis/agent/: __init__.py  anthropic_client.py  client.py  credentials.py  define.py  hardware.py  litellm_client.py  loop.py  model_config.py  openai_client.py  pricing.py  providers.py  session.py  tools.py
src/metis/benchmark/: __init__.py  budget.py  metrics.py  plateau.py  prune.py  ranking.py  robustness.py  runner.py  sealer.py  store.py
src/metis/data_sources/: __init__.py  ingest.py  provenance.py  provider.py  providers.py
src/metis/portability/: __init__.py  bundle.py  export.py
src/metis/projects/: __init__.py  schema.py
src/metis/sandbox/: __init__.py  lockbox.py  ossandbox.py  pyrunner.py  runlog.py  tools.py
src/metis/training/: __init__.py  evolve.py  toy.py  zoo.py
src/metis/tui/: __init__.py  app.py
tests/: test_agent_loop.py  test_agent_tools.py  test_anthropic_client.py  test_benchmark.py  test_data_sources.py  test_define.py  test_evolution.py  test_litellm_client.py  test_lockbox.py  test_m6_polish.py  test_projects.py  test_providers.py  test_pyrunner.py  test_runlog.py  test_sandbox.py  test_sandbox_tools_limits.py  test_session.py  test_templates.py  test_training_e2e.py  test_tui.py
