[project]
name = "metis"
version = "0.1.0"
description = "An agent harness for training efficient non-LLM models."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["machine-learning", "agent", "tui", "automl", "non-llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "textual>=0.60",      # TUI
    "litellm>=1.0",       # provider-agnostic agent completion (bundles the openai SDK)
    "pyyaml>=6.0",        # project/recipe config
    "pydantic>=2.0",      # schema validation
]

[project.optional-dependencies]
ml = [
    "torch",
    "torchvision",   # pretrained MobileNetV3 / ResNet18 for the image zoo
    "scikit-learn",
    "numpy",
]
dev = [
    "ruff",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/whatonlylue/Metis"
Repository = "https://github.com/whatonlylue/Metis"
Issues = "https://github.com/whatonlylue/Metis/issues"

[project.scripts]
metis = "metis.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metis"]

[tool.ruff]
line-length = 100
target-version = "py311"
